# incidentbot

./: .dockerignore  .env.sample  .env.test  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.arm64  Dockerfile.lite  Dockerfile.util  Dockerfile.util.arm64  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  cloudbuild.dev.yml  cloudbuild.prod.yml  config.py  docker-compose.yml  export-test-vars.sh  gke-deploy.dev.yml  kustomization.yaml  main.py  manifest.yaml  mkdocs.yml  netlify.toml  package-lock.json  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  slack_app_manifest.yaml  test-values.yaml
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependabot.yaml  docs.yml  lint.yml  tests.yml
alembic/: env.py
alembic/versions/: 65d4a71a8e37_create_gitlabincidents.py  70dc94de8fe2_add_cols_to_pd_inc_record.py  a356e9f16eef_dependency_changes.py  c084a30ce811_add_cols_to_inc_record.py  c1d6d526637a_initial_commit.py  d3da32cf941c_initial_commit.py  e8a0a978b5f7_add_sp_upstream_id_col.py
backend/: .env.sample  .env.test  .gitignore  Makefile  config-test.yaml  config.py  config.yaml  logger.py  main.py  pyproject.toml  pytest.ini  requirements.txt  variables.py
backend/alembic/: env.py
backend/alembic/versions/: 0018a13f433d_change_user_password_field_to_no_limit.py  00417e13021a_rename_rca_to_postmortem.py  0a8a3a1f6f6e_remove_unique_role_columns_add_general_.py  1be0468c576c_add_conference_bridge_column_to_.py  20b507f90f5e_add_column_to_track_pagerduty_incidents.py  460305cbabee_rename_conference_bridge_col_to_meeting_.py  6cb77b13f283_add_original_description_column_to_.py  6e7e162ffdb6_add_jira_issues_column_to_incidents_.py  ca70b39d39ed_add_security_column_to_incidents_table.py  d1258401df8c_add_sp_incident_data_column_to_.py
backend/bot/: exc.py
backend/bot/api/: flask.py
backend/bot/api/routes/: auth.py  health.py  incident.py  job.py  pager.py  postmortem.py  setting.py  user.py
backend/bot/api/schemas/: incident.py
backend/bot/audit/: log.py
backend/bot/confluence/: api.py  postmortem.py  rca.py  template.py
backend/bot/db/: db.py
backend/bot/google_meet/: meeting.py
backend/bot/googlemeet/: meeting.py
backend/bot/incident/: action_parameters.py  actions.py  incident.py  templates.py
backend/bot/interfaces/: kubernetes.py
backend/bot/jira/: api.py  issue.py
backend/bot/mock/: handler.py
backend/bot/models/: incident.py  pager.py  pg.py  setting.py  user.py
backend/bot/opsgenie/: api.py
backend/bot/pagerduty/: api.py
backend/bot/scheduler/: scheduler.py
backend/bot/settings/: im.py
backend/bot/shared/: tools.py
backend/bot/slack/: client.py  handler.py  helpers.py  incident_logging.py  messages.py  modals.py
backend/bot/startup/: tasks.py
backend/bot/statuspage/: actions.py  handler.py  slack.py
backend/bot/templates/: tools.py
backend/bot/templates/confluence/: postmortem.py  rca.py
backend/bot/templates/incident/: channel_boilerplate.py  digest_notification.py  resolution_message.py  updates.py  user_dm.py
backend/bot/utils/: utils.py
backend/bot/web/: routes.py
backend/bot/zoom/: meeting.py
backend/kubernetes/: incident-crd.yaml  sample-incident-rd.yaml
backend/templates/: README.md
backend/templates/confluence/: rca.html
backend/templates/slack/: incident_channel_boilerplate.json  incident_digest_notification.json  incident_digest_notification_update.json  incident_public_status_update.json  incident_severity_update.json  incident_status_update.json  role_definitions.json  severity_levels.json
backend/tests/: conftest.py  mock_web_api_server.py  test_app.py  test_config.py  test_confluence.py  test_incident.py  test_incident_meeting.py  test_postmortem.py  test_shared.py  test_tools.py  test_utils.py
backend/tests/files/: sample.html  sample.json
bot/core/: webapp.py
bot/db/: db.py
bot/incident/: action_parameters.py  actions.py  incident.py
bot/pagerduty/: api.py
bot/scheduler/: scheduler.py
bot/shared/: tools.py
bot/slack/: client.py  handler.py  messages.py  modals.py
bot/statuspage/: handler.py
deploy/charts/: janus-1.0.0.tgz  janus-1.0.1.tgz
docs/: Dockerfile  changelog.md  configuration.md  faq.md  features.md  index.md  installation.md  integrations.md  setup.md  troubleshooting.md  ui.md  usage.md
frontend/: .eslintrc.json  README.md  package-lock.json  package.json
incidentbot/: exceptions.py  logging.py
nginx/: nginx.conf
scripts/: bootstrap_local_pg.sql  generate-openapi-client.sh  helm.sh  render_app_manifest.sh  version-bump.sh  wait-for-it.sh
templates/: incident_channel_boilerplate.json  incident_digest_notification.json  incident_digest_notification_update.json  incident_resolution_message.json
tests/: test_app.py  test_incident.py  test_incident_core.py  test_shared.py  test_utils.py  utils.py
workflows/: tests.yml
(+250 files in other folders)
