[tool.poetry]
name = "incidentbot"
version = "2.1.4"
description = "The open source incident management framework."
authors = ["Scott Hawkins <scott@echoboomer.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.6"
alembic = "^1.14.0"
apscheduler = "^3.10.4"
atlassian-python-api = "^3.41.16"
bcrypt = "^4.2.0"
emails = "^0.6"
fastapi = "^0.115.12"
jinja2 = "^3.1.6"
mkdocs-glightbox = "^0.4.0"
mkdocs-material = "^9.6.11"
opsgenie-sdk = "^2.1.5"
passlib = "^1.7.4"
pdpyras = "^5.3.0"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.11.2"}
pydantic-settings = {extras = ["yaml"], version = "^2.8.1"}
pyjwt = "^2.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.26.0"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.0"
pytest-sqlalchemy-mock = "^0.1.7"
python-dotenv = "^1.0.1"
python-json-logger = "^3.3.0"
python-multipart = "^0.0.20"
requests = "^2.32.3"
requests-mock = "^1.12.1"
ruff = "^0.11.4"
slack-bolt = "^1.21.2"
slack-sdk = "^3.35.0"
sqlmodel = "^0.0.22"
structlog = "^25.1.0"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
