[tool.poetry]
name = "incidentbot"
version = "2.2.3"
description = "The open source incident management framework."
authors = ["Scott Hawkins <scott@echoboomer.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.9"
alembic = "^1.17.1"
apscheduler = "^3.11.0"
atlassian-python-api = "^4.0.7"
bcrypt = "^5.0.0"
emails = "^0.6"
fastapi = "^0.116.1"
jinja2 = "^3.1.6"
mkdocs-glightbox = "^0.4.0"
mkdocs-material = "^9.6.18"
pagerduty = "^6.1.0"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = {extras = ["yaml"], version = "^2.10.1"}
pyjwt = "^2.10.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.1"
pytest-sqlalchemy-mock = "^0.1.7"
python-dotenv = "^1.2.1"
python-gitlab = {extras = ["graphql"], version = "^6.4.0"}
python-json-logger = "^4.0.0"
python-multipart = "^0.0.20"
requests = "^2.32.5"
requests-mock = "^1.12.1"
ruff = "^0.12.11"
slack-bolt = "^1.24.0"
slack-sdk = "^3.36.0"
sqlmodel = "^0.0.27"
structlog = "^25.4.0"
uvicorn = "^0.38.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
