[tool.poetry]
name = "incident-bot"
version = "0.11.2"
description = "Incident Management framework for Slack."
authors = ["echoboomer <scott@echoboomer.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "incident_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.9.1"
apispec = "6.0.2"
apscheduler = "4.0.0a2"
atlassian-python-api = "3.32.1"
feedparser = "6.0.10"
flasgger = "0.9.5"
flask = "2.2.2"
flask-cors = "3.0.10"
flask-jwt-extended = "4.4.4"
flask-limiter = "3.0.0"
flask-login = "0.6.2"
flask-marshmallow = "0.14.0"
marshmallow = "3.19.0"
marshmallow-sqlalchemy = "0.28.1"
pdpyras = "4.5.2"
psycopg2-binary = "2.9.5"
pyjokes = "0.6.0"
pytest = "7.2.0"
pytest-env = "0.8.1"
pytest-mock = "3.10.0"
pytest-sqlalchemy-mock = "0.1.4"
python-dotenv = "0.21.0"
pytz = "2022.7"
requests = "2.28.1"
requests-mock = "1.10.0"
slack-bolt = "1.16.1"
slack-sdk = "3.19.5"
sqlalchemy = "1.4.45"
waitress = "2.1.2"
werkzeug = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
